# WildDet3D

./: .gitignore  README.md  pyproject.toml
demo/huggingface/: app.py
docs/: ONBOARDING.md  TRAINING.md
